--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,7 +9,8 @@ Contact
 </div>
 <div class="container mb-3 py-4">
     <h1 class="text-center">Contact Us</h1>
-    <form class="form-horizontal">
+    <form class="form-horizontal" method="post" action="/contact">
+        {% csrf_token %}
          <div class="form-group">
             <label for="exampleFormControlInput1" class="form-label">Name</label>
             <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name" >
@@ -22,7 +23,7 @@ Contact
         
         <div class="form-group">
             <label for="exampleFormControlInput1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <input type="email" class="form-control" id="exampleFormControlInput1" name="email"placeholder="name@example.com">
         </div>
         
         <div class="form-group">
