--- a/templates/index.html
+++ b/templates/index.html
@@ -55,13 +55,15 @@ Home
            <img src="/static/big/bread.jpg" class="d-block w-100" alt="...">
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Special Breads & Dips .</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">
+                     View Dishes
+                    </button>
+                    
                 </div>
-                <small class="text-muted">9 mins</small>
+                 
               </div>
             </div>
           </div>
@@ -71,13 +73,13 @@ Home
             <img src="/static/big/food1.jpg" class="d-block w-100" alt="...">
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Special Mouthwatering .</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View Dishes</button>
+                    
                 </div>
-                <small class="text-muted">9 mins</small>
+                 
               </div>
             </div>
           </div>
@@ -87,13 +89,13 @@ Home
             <img src="/static/big/food2.jpg" class="d-block w-100" alt="...">
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Waffales for you.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View Dishes</button>
+                    
                 </div>
-                <small class="text-muted">9 mins</small>
+                 
               </div>
             </div>
           </div>
@@ -104,13 +106,13 @@ Home
             <img src="/static/big/food3.jpg" class="d-block w-100" alt="...">
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Wide Range of Noodles.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View Dishes</button>
+                    
                 </div>
-                <small class="text-muted">9 mins</small>
+                 
               </div>
             </div>
           </div>
@@ -120,13 +122,13 @@ Home
             <img src="/static/big/food4.jpg" class="d-block w-100" alt="...">
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Homley & Healthy Dishes.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View Dishes</button>
+                    
                 </div>
-                <small class="text-muted">9 mins</small>
+                 
               </div>
             </div>
           </div>
@@ -136,13 +138,13 @@ Home
             <img src="/static/big/food5.jpg" class="d-block w-100" alt="...">
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">American Style Burgers.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View Dishes</button>
+                    
                 </div>
-                <small class="text-muted">9 mins</small>
+                 
               </div>
             </div>
           </div>
@@ -153,13 +155,13 @@ Home
             <img src="/static/big/food6.jpg" class="d-block w-100" alt="...">
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Vegan & Diet-Control.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View Dishes</button>
+                    
                 </div>
-                <small class="text-muted">9 mins</small>
+                 
               </div>
             </div>
           </div>
@@ -169,13 +171,13 @@ Home
             <img src="/static/big/food7.jpg" class="d-block w-100" alt="...">
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Chef's Special.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View Dishes</button>
+                    
                 </div>
-                <small class="text-muted">9 mins</small>
+                 
               </div>
             </div>
           </div>
@@ -185,13 +187,13 @@ Home
             <img src="/static/big/food8.jpg" class="d-block w-100" alt="...">
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Juicy and Fried Non-Veg (For those who don't care).</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View Dishes</button>
+                    
                 </div>
-                <small class="text-muted">9 mins</small>
+                 
               </div>
             </div>
           </div>
