--- a/templates/pizza.html
+++ b/templates/pizza.html
@@ -1,8 +1,8 @@
 {%extends 'base.html'%}
 {%block title%}
-Services
+Pizza-
 {%endblock title%}
 
 {%block body%}
-
-{%endblock body%} 
+Pizza Page hai bsdk
+{%endblock body%}
